...
            android:layout_below="@+id/detailsFile"
            android:layout_marginBottom="20dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/detailsCartButton"
            android:layout_below="@+id/detailsPrice"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_cart"
            android:id="@+id/detailsCheckoutButton"
            android:layout_below="@+id/detailsPrice"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
