...
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:padding="16dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkoutPayment"
            android:text="@string/cart_pay"
            android:layout_gravity="center" />
</LinearLayout>
