...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/deal1"
                            android:layout_width="125dp"
                            android:layout_height="125dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
...
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/menu_pc"
                        android:src="@drawable/ic_pc" />

                    <ImageView
                        android:id="@+id/imageViewPS"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/menu_sony"
                        android:src="@drawable/ic_playstation" />
                </LinearLayout>
...
