<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionsActivity">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapsHeader"
        android:text="@string/directions_to_ere_games"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Button
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapButton"
        android:text="@string/get_location"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/map"
        android:layout_alignRight="@id/map" />


</RelativeLayout>