<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_pc"
            android:title="@string/news"/>

        <item
            android:id="@+id/nav_playstation"
            android:icon="@drawable/ic_playstation"
            android:title="@string/menu_sony"
            />
        <item
            android:id="@+id/nav_xbox"
            android:icon="@drawable/ic_xbox"
            android:title="@string/menu_microsoft"
            />
        <item
            android:id="@+id/nav_nintendo"
            android:icon="@drawable/ic_nintendo"
            android:title="@string/menu_nintendo"
            />
        <item
            android:id="@+id/nav_pc"
            android:icon="@drawable/ic_pc"
            android:title="@string/menu_pc"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/menu_login" />

    </group>
</menu>
