...

            <Button
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gMaps"
                android:text="@string/our_locations" />

            <TextView
                android:id="@+id/mapButtonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
