<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?android:attr/colorFocusedHighlight"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_alignParentTop="true"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/addphoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/profile_image" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/profileTextViewUname"
            android:layout_below="@+id/profileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/profile_name"
            android:layout_centerHorizontal="true"
            android:ems="10" />
        <TextView
            android:id="@+id/profileTextviewChangePhoto"
            android:layout_below="@id/profileTextViewUname"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_photo_to_update"
            android:paddingBottom="20dp"/>
        <EditText
            android:id="@+id/profileEditTextFname"
            android:layout_below="@+id/profileTextviewChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_first_name"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:ems="10"
            android:inputType="text" />
        <EditText
            android:id="@+id/profileEditTextLname"
            android:layout_below="@+id/profileEditTextFname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_last_name"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="text"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextAddress"
            android:layout_below="@+id/profileEditTextLname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_address"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="text"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextPhone"
            android:layout_below="@+id/profileEditTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_phone"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:ems="10" />
        <EditText
            android:id="@+id/profileEditTextEmail"
            android:layout_below="@+id/profileEditTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:ems="10" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/profileSaveButton"
            android:layout_below="@id/profileEditTextEmail"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/profile_save_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/profileClearButton"
            android:layout_below="@id/profileSaveButton"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/profile_clear_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/profileTestButton"
            android:layout_below="@id/profileClearButton"
            android:layout_centerHorizontal="true"
            android:minWidth="160dp"
            android:text="@string/profile_test_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </RelativeLayout>
</ScrollView>