package au.edu.murdoch.ict376project;

import androidx.test.espresso.contrib.NavigationViewActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.DrawerActions.open;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class CreateAccountTest {

    @Rule
    public ActivityScenarioRule<MainActivity> activityRule
            = new ActivityScenarioRule<>(MainActivity.class);

    @Test
    public void switchToFragment() {
        onView(withId(R.id.drawer_layout)).perform(open());
        onView(withId(R.id.nav_view)).perform(NavigationViewActions.navigateTo(R.id.nav_login));
        onView(withId(R.id.clickToRegisterUserPwdButton)).check(matches(isDisplayed()));
        onView(withId(R.id.clickToRegisterUserPwdButton)).perform(click());

        onView(withId(R.id.usernameEt)).perform(typeText("Tester1"));
        onView(withId(R.id.passwordEt)).perform(typeText("Test1!"));
        onView(withId(R.id.rePasswordEt)).perform(typeText("Test1!"), closeSoftKeyboard());
        onView(withId(R.id.registerUserPwdButton)).perform(click());
        onView(withId(R.id.loginButton)).perform(click());
    }

}
